--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pollo Campero Fancy</title>
+    <title>Pollo Campero</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <h1>BIENVENIDOS A POLLO CAMPERO </h1>
+        <h1>BIENVENIDOS A POLLO CAMPERO</h1>
         <p>Desde esta página puedes ordenar tu menú favorito desde la comodidad de tu casa</p>
 
         <div class="galeria">
